test/library/standard/List/indexOf/listIndexOfHaltEnd.good
listIndexOfHaltEnd.chpl:12: error: halt reached - End index for "list.find" out of bounds: 8
